# dust

./: CMakeLists.txt  main.ds
include/: minilog.h
include/ast/: ast.h  expr.h  func.h  stmt.h
include/code/: gen.h
include/emitter/: emitter.h
include/jit/: dustjit.h
include/lexer/: lexer.h
include/parser/: parser.h
include/utils/: minilog.h
lib/: print.cc
src/: ast.cc  main.cpp
src/ast/: ast.cc  expr.cc  func.cc  stmt.cc
src/code/: gen.cc
src/emitter/: emitter.cc
src/lexer/: lexer.cc
src/parser/: handler.cc  initializer.cc  parser.cc  utils.cc
